# flowo-backend/docs/swagger.yaml
@@ -18,6 +18,9 @@ definitions:
     properties:
       description:
         type: string
+      effective_price:
+        description: ImageURL      string  `json:"image_url,omitempty"`
+        type: number
       name:
         type: string
       price:
@@ -26,6 +29,46 @@ definitions:
         type: integer
       quantity:
         type: integer
+      total_price:
+        type: number
+    type: object
+  dto.CreatePricingRuleRequest:
+    properties:
+      adjustment_type:
+        enum:
+        - percentage_discount
+        - fixed_discount
+        - override_price
+        type: string
+      adjustment_value:
+        type: number
+      applicable_flower_type_id:
+        type: integer
+      applicable_product_id:
+        type: integer
+      applicable_product_status:
+        type: string
+      is_active:
+        type: boolean
+      priority:
+        type: integer
+      rule_name:
+        type: string
+      special_day_id:
+        type: integer
+      time_of_day_end:
+        type: string
+      time_of_day_start:
+        type: string
+      valid_from:
+        type: string
+      valid_to:
+        type: string
+    required:
+    - adjustment_type
+    - adjustment_value
+    - priority
+    - rule_name
     type: object
   dto.CreateReviewRequest:
     properties:
@@ -396,6 +439,36 @@ paths:
       summary: Get all flower types
       tags:
       - flower-types
+  /api/v1/pricing/rule:
+    post:
+      consumes:
+      - application/json
+      description: Admin adds a new dynamic pricing rule
+      parameters:
+      - description: New Pricing Rule
+        in: body
+        name: rule
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreatePricingRuleRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Add new pricing rule
+      tags:
+      - pricing
   /api/v1/product:
     post:
       consumes:
